# valida_doc_chile

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/valida_doc_chile/: __init__.py  consulta.py
